--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react-social-icons": "^5.15.0",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^3.0.5"
   }
 }
